--- a/.env.config
+++ b/.env.config
@@ -1,6 +1,6 @@
-# Sections: comma separated. options available: ARTS,BOOKS,BUSINESS,FASHION,HEALTH,MAGAZINE,T_MAGAZINE,MOVIES,NEW_YORK,OPINION,SCIENCE,REAL_ESTATE,SPORTS,STYLE,TRAVEL,U_S,WORLD
+# Sections: comma separated. options available: Any,Arts,Books,Business,Fashion,Health,Magazine,T Magazine,Movies,New York,Opinion,Science,Real Estate,Sports,Style,Travel,U.S.,World
 SECTIONS=BUSINESS,HEALTH
-# Type: comma separated. options available: ARTICLE,AUDIO,IMAGE_SLIDESHOW,RECIPE,INTERACTIVE_GRAPHICS,VIDEO,WIRECUTTERARTICLE
+# Type: comma separated. options available: Article,Audio,Image Slideshow,Recipe,Interactive Graphics,Video,Wirecutterarticle
 NOTICE_TYPE=ARTICLE
 # Period: number of months for which you need to receive news
 MONTH_PERIOD=2
