fix: env.config

--- a/.env.config
+++ b/.env.config
@@ -1,8 +1,8 @@
 # Sections: comma separated. options available: Any,Arts,Books,Business,Fashion,Health,Magazine,T Magazine,Movies,New York,Opinion,Science,Real Estate,Sports,Style,Travel,U.S.,World
-SECTIONS=BUSINESS,HEALTH
+SECTIONS=World
 # Type: comma separated. options available: Article,Audio,Image Slideshow,Recipe,Interactive Graphics,Video,Wirecutterarticle
-NOTICE_TYPE=ARTICLE
+NOTICE_TYPE=Article
 # Period: number of months for which you need to receive news
 MONTH_PERIOD=2
-PHRASE=autism
+PHRASE=CERN
 ENV=LOCAL
